--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^12.12.21",
+    "@types/uuid": "^3.4.6",
+    "gql2ts": "^1.10.1",
     "nodemon": "^2.0.2",
     "ts-node": "8.5.4",
     "tslint": "^5.20.1",
@@ -11,12 +14,16 @@
     "typescript": "3.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.18.3",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.21"
+    "typeorm": "0.2.21",
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
   }
 }
