--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
   "name": "ts-server-boilerplate",
   "version": "0.0.1",
+  "license": "UNLICENSED",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/node": "^12.12.21",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.1",
     "@types/uuid": "^3.4.6",
     "gql2ts": "^1.10.1",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "ts-jest": "^24.2.0",
     "ts-node": "8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "3.7.4"
   },
   "dependencies": {
+    "aws-lambda": "^0.1.2",
     "bcryptjs": "^2.4.3",
     "graphql-import": "^0.7.1",
+    "graphql-request": "^1.8.2",
     "graphql-yoga": "^1.18.3",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.21",
+    "typeorm": "0.2.22",
     "uuid": "^3.3.3"
   },
+  "resolutions": {
+    "graphql": "0.13.0"
+  },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+    "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
+    "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
+    "ci": "start-server-and-test test-server http://localhost:4000 test"
+  },
+  "jest": {
+    "preset": "ts-jest"
   }
 }
