--- a/ormconfig.json
+++ b/ormconfig.json
@@ -9,6 +9,7 @@
     "database": "ts-server",
     "synchronize": true,
     "logging": true,
+    "uuidExtension": "pgcrypto",
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
@@ -29,6 +30,7 @@
     "synchronize": true,
     "logging": false,
     "dropSchema": true,
+    "uuidExtension": "pgcrypto",
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
