--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "graphql-yoga": "^1.18.3",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.22",
-    "uuid": "^3.3.3"
+    "typeorm": "0.2.22"
   },
   "resolutions": {
     "graphql": "0.13.0"
@@ -37,7 +36,7 @@
   "scripts": {
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
