--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.1",
     "@types/uuid": "^3.4.6",
+    "@types/yup": "^0.26.27",
     "gql2ts": "^1.10.1",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
@@ -28,7 +29,8 @@
     "graphql-yoga": "^1.18.3",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.22"
+    "typeorm": "0.2.22",
+    "yup": "^0.28.0"
   },
   "resolutions": {
     "graphql": "0.13.0"
