--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/graphql": "0.13.0",
+    "@types/ioredis": "^4.14.3",
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.1",
     "@types/uuid": "^3.4.6",
@@ -27,9 +28,11 @@
     "graphql-request": "^1.8.2",
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
+    "ioredis": "^4.14.1",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.22",
+    "uuid": "^3.3.3",
     "yup": "^0.28.0"
   },
   "resolutions": {
@@ -38,11 +41,12 @@
   "scripts": {
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --forceExit",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "globalSetup": "./src/testSetup/callSetup.js"
   }
 }
