create tests for confirm link

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/ioredis": "^4.14.3",
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.1",
+    "@types/node-fetch": "^2.5.4",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
     "gql2ts": "^1.10.1",
@@ -29,6 +30,7 @@
     "graphql-tools": "^4.0.6",
     "graphql-yoga": "^1.18.3",
     "ioredis": "^4.14.1",
+    "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.22",
