--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "scripts": {
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
-    "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --forceExit",
+    "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --watch",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
