--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.2",
     "@types/graphql": "0.13.0",
     "@types/ioredis": "^4.14.3",
     "@types/jest": "^24.0.24",
@@ -24,6 +25,7 @@
   "dependencies": {
     "aws-lambda": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "graphql": "0.13.0",
     "graphql-import": "^0.7.1",
     "graphql-request": "^1.8.2",
