--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "3.7.4"
   },
   "dependencies": {
+    "@gql2ts/from-schema": "^1.10.1",
     "aws-lambda": "^0.1.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
@@ -46,7 +47,7 @@
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
     "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --watch",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts",
+    "gen-schema-types": "ts-node --files src/scripts/createTypes.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
   "jest": {
