--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.1",
     "@types/node-fetch": "^2.5.4",
+    "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
     "gql2ts": "^1.10.1",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
     "ts-node": "8.5.4",
     "tslint": "^5.20.1",
@@ -26,6 +28,7 @@
     "@gql2ts/from-schema": "^1.10.1",
     "aws-lambda": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "0.13.0",
     "graphql-import": "^0.7.1",
@@ -36,6 +39,7 @@
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
+    "sparkpost": "^2.1.4",
     "typeorm": "0.2.22",
     "uuid": "^3.3.3",
     "yup": "^0.28.0"
@@ -47,11 +51,14 @@
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
     "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --watch",
-    "gen-schema-types": "ts-node --files src/scripts/createTypes.ts",
+    "gen-schema-types": "ts-node --files -r dotenv/config src/scripts/createTypes.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
   "jest": {
     "preset": "ts-jest",
-    "globalSetup": "./src/testSetup/callSetup.js"
+    "globalSetup": "./src/testSetup/callSetup.js",
+    "setupFiles": [
+      "dotenv/config"
+    ]
   }
 }
