--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
     "@types/graphql": "0.13.0",
     "@types/ioredis": "^4.14.3",
     "@types/jest": "^24.0.24",
@@ -28,8 +30,10 @@
     "@gql2ts/from-schema": "^1.10.1",
     "aws-lambda": "^0.1.2",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^4.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "graphql": "0.13.0",
     "graphql-import": "^0.7.1",
     "graphql-request": "^1.8.2",
