clean up some tests by moving to TestClient class, added request-promise

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.1",
     "@types/node-fetch": "^2.5.4",
+    "@types/request-promise": "^4.1.45",
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
@@ -44,6 +45,7 @@
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
     "reflect-metadata": "^0.1.13",
+    "request-promise": "^4.2.5",
     "sparkpost": "^2.1.4",
     "typeorm": "0.2.22",
     "uuid": "^3.3.3",
