--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.2",
+    "@types/express-rate-limit": "^3.3.3",
     "@types/express-session": "^1.15.16",
     "@types/graphql": "0.13.0",
     "@types/ioredis": "^4.14.3",
@@ -34,6 +35,7 @@
     "connect-redis": "^4.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "express-session": "^1.17.0",
     "graphql": "0.13.0",
     "graphql-import": "^0.7.1",
@@ -42,6 +44,7 @@
     "ioredis": "^4.14.1",
     "node-fetch": "^2.6.0",
     "pg": "^7.15.1",
+    "rate-limit-redis": "^1.7.0",
     "reflect-metadata": "^0.1.13",
     "request-promise": "^4.2.5",
     "sparkpost": "^2.1.4",
