--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^4.17.2",
     "@types/express-rate-limit": "^3.3.3",
     "@types/express-session": "^1.15.16",
+    "@types/faker": "^4.1.9",
     "@types/graphql": "0.13.0",
     "@types/ioredis": "^4.14.3",
     "@types/jest": "^24.0.24",
@@ -18,6 +19,7 @@
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
+    "faker": "^4.1.0",
     "gql2ts": "^1.10.1",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
@@ -58,7 +60,7 @@
   "scripts": {
     "start": "NODE_ENV=development TS_NODE_FILES=true nodemon --exec ts-node --files src/index.ts",
     "test-server": "NODE_ENV=test TS_NODE_FILES=true ts-node src/index.ts",
-    "test": "NODE_ENV=test TS_NODE_FILES=true jest --runInBand --detectOpenHandles --watch",
+    "test": "NODE_ENV=test TS_NODE_FILES=true jest --detectOpenHandles --watch",
     "gen-schema-types": "ts-node --files -r dotenv/config src/scripts/createTypes.ts",
     "ci": "start-server-and-test test-server http://localhost:4000 test"
   },
